--- a/packages/sift/index.html
+++ b/packages/sift/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GMNA</title>
+  <title>Macrostrat Sift</title>
   <meta charset="utf-8" />
   <meta http-equiv="Content-Language" content="en">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -70,7 +70,7 @@
 
     #unit_info_right {
       width: 60%;
-      top: 50px;
+      top: 0;
       height: 100%;
       right: -60%;
       max-width: 500px;
@@ -175,7 +175,7 @@
   
   <script id="column-template" type="x-tmpl-mustache">
     <h3><a href="/info?col_id={{col_id}}">{{col_name}} <small>({{col_id}})</small></a></h3>
-    <strong>Group: </strong> <a href="/info?group={{col_group_id}}">{{col_group}} <small>({{col_group_id}})</small></a><br>
+    <strong>Group: </strong> <a href="/info?col_group_id={{col_group_id}}">{{col_group}} <small>({{col_group_id}})</small></a><br>
     <strong>Area: </strong> {{area}} <small>km<sup>2</sup></small><br>
     <strong>Age: </strong> {{b_age}} - {{t_age}} <small>Ma</small> <br>
     <strong>Sections: </strong> {{sections.length}} <br>
