--- a/packages/sift/index.html
+++ b/packages/sift/index.html
@@ -114,7 +114,7 @@
       height: auto;
     }
 
-    .unit_info_content > a {
+    .unit_info_content > a, .unit_info_content > h3 > a {
       color: #aaa;
     }
 
@@ -150,7 +150,10 @@
 <body>
   <div id="header">
     <div class="headerItem left">
-      <h3><i>sift</i></h3>
+      <a href="/"><img src="img/logo_red.png" class="header-logo"></a>
+      <a href="/sift">
+        <h3 class="header-title"><i>sift</i></h3>
+      </a>
     </div>
     <div class="headerItem right">
       <div class="searchBox typeahead">
@@ -174,8 +177,8 @@
   </div>
   
   <script id="column-template" type="x-tmpl-mustache">
-    <h3><a href="/info?col_id={{col_id}}">{{col_name}} <small>({{col_id}})</small></a></h3>
-    <strong>Group: </strong> <a href="/info?col_group_id={{col_group_id}}">{{col_group}} <small>({{col_group_id}})</small></a><br>
+    <h3><a href="info?col_id={{col_id}}">{{col_name}} <small>({{col_id}})</small></a></h3>
+    <strong>Group: </strong> <a href="info?col_group_id={{col_group_id}}">{{col_group}} <small>({{col_group_id}})</small></a><br>
     <strong>Area: </strong> {{area}} <small>km<sup>2</sup></small><br>
     <strong>Age: </strong> {{b_age}} - {{t_age}} <small>Ma</small> <br>
     <strong>Sections: </strong> {{sections.length}} <br>
