Update logo path on /info

--- a/packages/sift/info/index.html
+++ b/packages/sift/info/index.html
@@ -191,7 +191,7 @@
 <body>
   <div id="header">
     <div class="headerItem left">
-      <a href="/"><img src="img/logo_red.png" class="header-logo"></a>
+      <a href="/"><img src="../img/logo_red.png" class="header-logo"></a>
       <a href="/sift">
         <h3 class="header-title"><i>sift</i></h3>
       </a>
